--- a/Workbench/src/SaveSessionTileWindow.mxml
+++ b/Workbench/src/SaveSessionTileWindow.mxml
@@ -11,6 +11,8 @@
       import mx.rpc.events.FaultEvent;
       import mx.rpc.events.ResultEvent;
       import mx.rpc.http.HTTPService;
+      
+      import mx.controls.Alert;
 
       /**
        * Initialize the tile window
