Remove escaping for the attribute/value filter when sending a query to the Search structWSF endpoint because it was double-encoding the value and the filter was  not understood by the endpoint.

--- a/sWebMap/src/sWebMap.mxml
+++ b/sWebMap/src/sWebMap.mxml
@@ -1818,13 +1818,13 @@
 								{
 									if(attrValue.uri == attribute)
 									{
-										filteringValue = "::" + escape(attrValue.value);
+										filteringValue = "::" + attrValue.value;
 										
 										break;
 									}
 								}
 								
-								attributes = attributes + escape(attribute) + filteringValue + ";";
+								attributes = attributes + attribute + filteringValue + ";";
 							}
 							
 							attributes = attributes.substr(0, attributes.length - 1);
