Excaping the resultset string. In some rare case, when the JavaScript interface was called, an error was appearing in the browser because of some missformed JSON. However, the generated JSON by the sWebMap was indeed valid JSON. So, there is some interaction, in some rare cases that were killing the browser.
Now the JS application has to first unescape() the resultset before parsing it into a JSON object.

--- a/sWebMap/src/sWebMap.mxml
+++ b/sWebMap/src/sWebMap.mxml
@@ -614,7 +614,7 @@
 										markerImageUrl: markerImageUrl,
 										polygonColor: polygonColor,
 										polylineColor: polylineColor,
-                    resultset: s.getJsonSerialization()
+                    resultset: escape(s.getJsonSerialization())
 									});
 								}              
 							}
