Adding the possibility to define a vertical axis label for the barchart. This update includes:
(1) UI to setthis label in the Workbench
(2) Saving that value in the Dashboard session file
(3) Loading of that value when a Dashboard get loaded from a session file

--- a/Workbench/src/Workbench.mxml
+++ b/Workbench/src/Workbench.mxml
@@ -2638,7 +2638,8 @@
             sessionXML += "            <vScale min=\""+selectedComponentObj.vScale.minValue+"\" max=\""+selectedComponentObj.vScale.maxValue+"\" />\n";
           }
           
-          if(selectedComponentObjName == "sLinearChart")
+          if(selectedComponentObjName == "sBarChart" ||
+             selectedComponentObjName == "sLinearChart")
           {
             sessionXML += "            <vAxisLabel>"+selectedComponentObj.getVerticalAxisLabel()+"</vAxisLabel>\n";
           }
