(1) Addition of a new setting: "disableBrowseMode" (2) Addition of a new setting: "displayFiltersDefault"
These two new settings does add a few more default behaviors to the sWebMap component. Check the documentation to see how these new settings impacts the behaviors of the control:

    http://techwiki.openstructs.org/index.php/SWebMap

--- a/js/sWebMap/css/sWebMap.css
+++ b/js/sWebMap/css/sWebMap.css
@@ -1,4 +1,12 @@
 
+#searchOrFilterExplanationText {
+  width: 100%;
+  padding-top: 50px;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 17px;
+}
+
 #recordDescriptionOverlay {
   background-color: #F2F1ED
 }
